--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opensea-ethers-js",
-  "version": "1.1.1",
+  "version": "1.1.4",
   "description": "Javascript SDK for the OpenSea Market ",
   "main": "lib/index.js",
   "type": "lib/index.d.ts",
@@ -19,20 +19,12 @@
   },
   "dependencies": {
     "ethers": "^5.5.4",
+    "https-proxy-agent": "^5.0.1",
+    "node-fetch": "^3.2.4",
     "query-string": "^7.1.1",
-    "web3-wallets": "^1.5.4"
+    "web3-wallets": "^1.5.7"
   },
   "devDependencies": {
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
-    "assert": "^2.0.0",
-    "bignumber.js": "^9.0.1",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "3.12.0",
     "@babel/preset-react": "^7.16.7",
     "@ensdomains/ensjs": "^2.1.0",
     "@types/chai": "^4.3.0",
@@ -41,24 +33,34 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "antd": "^4.19.3",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.4",
+    "bignumber.js": "^9.0.1",
+    "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.1.0",
     "cross-env": "^7.0.3",
+    "crypto-browserify": "3.12.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.5.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.49.10",
     "sass-loader": "^12.6.0",
     "sinon": "^12.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^5.3.3",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.6.3",
+    "url": "^0.11.0",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
