--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "ethers": "^5.5.4",
+    "https-proxy-agent": "^5.0.1",
+    "jsonschema": "^1.4.1",
+    "node-fetch": "^2.6.7",
     "query-string": "^7.1.1",
-    "web3-wallets": "^1.5.15",
-    "https-proxy-agent": "^5.0.1"
+    "web3-wallets": "^1.5.16"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
@@ -58,7 +60,6 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^5.3.3",
     "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.6.3",
     "url": "^0.11.0",
     "webpack": "^5.64.1",
