--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opensea-ethers-js",
-  "version": "1.1.16",
+  "version": "1.1.19",
   "description": "Javascript SDK for the OpenSea Market ",
   "main": "lib/index.js",
   "type": "lib/index.d.ts",
@@ -23,7 +23,8 @@
     "jsonschema": "^1.4.1",
     "node-fetch": "^2.6.7",
     "query-string": "^7.1.1",
-    "web3-wallets": "^1.5.21"
+    "web3-accounts": "1.1.0",
+    "web3-wallets": "^2.0.5"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
