--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "opensea-ethers-js",
-  "version": "1.2.2",
+  "version": "1.2.6",
   "description": "Javascript SDK for the OpenSea Market",
   "main": "lib/index.js",
   "type": "lib/index.d.ts",
   "author": "Element Project Developers",
   "git": "https://github.com/cryptotx/opensea-ethers-js",
   "scripts": {
-    "release": "tsc && npm publish",
+    "release": "tsc && npm publish && git tag $npm_package_version && git push --tag",
     "dev:tsc": "tsc -w -p tsconfig.json",
     "eslint": "eslint --fix src --ext .ts --max-warnings=0",
     "build:node": "webpack -c config/webpack.node.config.js",
@@ -19,14 +19,13 @@
     "cover": "nyc --reporter=html npm run test"
   },
   "dependencies": {
-    "ethers": "^5.5.4",
     "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
-    "net": "^1.0.2",
     "query-string": "^7.1.1",
     "tls": "^0.0.1",
-    "web3-accounts": "1.1.33",
-    "web3-wallets": "^2.0.19"
+    "net": "^1.0.2",
+    "web3-accounts": "1.2.4",
+    "web3-wallets": "^2.1.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
